# macro-regime-portfolio-lab

./: .gitignore  README.md  pyproject.toml
artifacts/reports/: baseline_equal_weight.md  fresh_forward_monitoring_metrics.csv  fresh_forward_monitoring_pending_signals.csv  fresh_forward_monitoring_returns.csv  fresh_forward_monitoring_warnings.csv  parameter_sensitivity.csv  robustness_bootstrap.csv  (+20 more)
company/: current-state.md  methodology-risk-review.md  project-charter.md  task-board.md
configs/: assets.yml  fresh_forward_monitoring.yml  regime_features.yml  sources.yml  turnover_stability.yml  validation.yml
docs/: allocation-rule-review.md  fresh-data-forward-monitoring-protocol.md  fresh-data-forward-monitoring.md  index.md  milestone-2-regime-plan.md  milestone-2-research-summary.md  parameter-sensitivity.md  post-stricter-regime-diagnostic-review.md  public-repo-readiness-check.md  regime-definition-review.md  robustness-review.md  turnover-cost-sensitivity.md  turnover-stability-protocol.md  turnover-stability-results.md  turnover-stability-review.md  validation-protocol.md  validation-results.md  validation-review.md  walk-forward-evaluation.md
scripts/: build_features.py  fetch_data.py  run_baseline_backtest.py  run_fresh_forward_monitoring.py  run_parameter_sensitivity.py  run_robustness_review.py  run_turnover_stability_protocol.py  run_validation_protocol.py  run_walk_forward.py
tests/: test_backtest.py  test_config.py  test_evaluation.py  test_features.py  test_fresh_forward.py  test_robustness.py  test_turnover_stability.py  test_validation.py
(+38 files in other folders)
